--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "mysql": "^2.13.0",
     "mysql2": "^1.1.2",
@@ -13,6 +14,7 @@
     "bluebird": "^3.4.7",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "supertest": "^2.0.1"
   }
 }
