--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "body-parser": "^1.16.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
     "mysql": "^2.13.0",
     "mysql2": "^1.1.2",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sequelize": "^3.30.0"
