--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
+    "cheerio": "^0.22.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
+    "express-vue": "^3.5.1",
+    "moment": "^2.17.1",
     "mysql": "^2.13.0",
     "mysql2": "^1.1.2",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "sequelize": "^3.30.0"
+    "sequelize": "^3.30.0",
+    "superagent": "^3.4.1"
   },
   "devDependencies": {
     "bluebird": "^3.4.7",
