--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha 'test/**/*.spec.js'"
+    "test": "cross-env NODE_ENV=test mocha 'test/**/*.spec.js'",
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
